# AiMissionPlanner

./: ACTION_CHECKLIST.txt  ACTION_PLAN_FOR_USER.md  BEZIER_FIX_SUMMARY.md  BUILD_FIX_COMPLETE_README.txt  CHANGES_GUI_EXIT_FIX.txt  CHANGES_SUMMARY.md  CHANGES_SUMMARY.txt  CLICK_HERE_FOR_MATPLOTLIB_HELP.bat  CPP_APPLICATION_GUIDE.md  CPP_IMPLEMENTATION_SUMMARY.md  CPP_PORTING_GUIDE.md  CPP_QUICK_START.md  DATA_SPLIT_SUMMARY.md  DELIVERABLES.md  DEPENDENCIES_FIXED.md  DEPENDENCY_FIX_COMPLETE.md  DEPENDENCY_FIX_GUIDE.md  DEPENDENCY_FIX_INDEX.md  DEPENDENCY_FIX_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILES_CREATED.txt  FILES_CREATED_MATPLOTLIB.txt  FINAL_SUMMARY.txt  FIXES_APPLIED.md  FIX_COMPLETE.md  FIX_COMPLETE_NUMPY_WARNINGS.md  FIX_COMPLETION_SUMMARY.txt  FIX_INSTRUCTIONS.txt  FIX_MATPLOTLIB_DLL_ERROR_NOW.bat  FIX_MATPLOTLIB_NOW.txt  FIX_NOW.txt  FIX_SILENT_EXIT.md  FIX_SUMMARY.md  GUI_EXIT_FIX_SUMMARY.md  GUI_FIX_INDEX.md  GUI_FIX_QUICK_START.md  GUI_FIX_SUMMARY.md  GUI_IMPLEMENTATION_COMPLETE.md  GUI_NOT_OPENING_SOLUTION.md  GUI_TROUBLESHOOTING.md  (+146 more)
api/: __init__.py  app.py  test_api.py
cpp/: BUILD_FIX_SUMMARY.md  BUILD_ON_WINDOWS.txt  CHANGES_MADE.txt  CLICK_HERE_TO_FIX_BUILD.txt  CMakeLists.txt  FIX_EXECUTABLE_NOT_FOUND.md  FIX_WINDOWS_BUILD.bat  FORCE_CLEAN.bat  HELP_INDEX.txt  QUICK_COMMAND_REFERENCE.txt  README.md  READ_THIS_IF_BUILD_FAILED.txt  RUN_THIS_ON_WINDOWS.bat  SOLUTION_IMPLEMENTED.txt  START_HERE_WINDOWS.txt  START_HERE_WINDOWS_BUILD_FIX.txt  WINDOWS_BUILD_FIXED.md  WINDOWS_BUILD_FIX_GUIDE.md  WINDOWS_BUILD_FIX_SUMMARY.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_BUILD_HELP_INDEX.txt  WINDOWS_BUILD_ISSUE_RESOLVED.txt  WINDOWS_BUILD_QUICKSTART.txt  build.bat  build.ps1  build.sh  check_build_environment.bat  clean_and_build.bat  clean_and_build.ps1  main.cpp  run_example.sh  trajectory_app.cpp  trajectory_inference.cpp  trajectory_inference.h  trajectory_metrics.cpp  trajectory_metrics.h  trajectory_plotter.cpp  trajectory_plotter.h
data/: trajectories_metadata.json
data/csv/: README.md
examples/: load_csv_data.py  trajectory_gui_examples.py
logs/: events.out.tfevents.1765437066.cursor.2254.0
models/: trajectory_generator.onnx  trajectory_generator_normalization.json
src/: __init__.py  data_generator.py  evaluate.py  export_onnx.py  inference.py  model.py  train.py  trajectory_gui.py  visualize.py
